Create Blog And Portfolio

--- a/Resume/Resume.csproj
+++ b/Resume/Resume.csproj
@@ -29,4 +29,12 @@
     </PackageReference>
   </ItemGroup>
 
+  <ItemGroup>
+    <UpToDateCheckInput Remove="Views\Home\Blog.cshtml" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <_ContentIncludedByDefault Remove="Views\Home\Blog.cshtml" />
+  </ItemGroup>
+
 </Project>
