Add Interface and IOC container

--- a/Resume.Application/Resume.Application.csproj
+++ b/Resume.Application/Resume.Application.csproj
@@ -11,4 +11,8 @@
     <ProjectReference Include="..\Resume.Infrastructuer\Resume.Infrastructuer.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="DTOs\AdminSite\" />
+  </ItemGroup>
+
 </Project>
